--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,11 @@
     <string name="sign_in_with_phone">Sign In with Phone</string>
     <string name="sign_in_with_google">Sign In with Google</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="decline">Decline</string>
+    <string name="permission_require">Permission require</string>
+    <string name="decline_failed">Decline Failed</string>
+    <string name="decline_success">You have decline this request</string>
+    <string name="token_not_found">Token not found</string>
+    <string name="start_uber">START</string>
+    <string name="rider_not_found">Rider not found with key</string>
 </resources>
