--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,11 @@
     <string name="token_not_found">Token not found</string>
     <string name="start_uber">START</string>
     <string name="rider_not_found">Rider not found with key</string>
+    <string name="accept_failed">Accept failed</string>
+    <string name="id_number">Id Number</string>
+    <string name="drive_license">Drive License</string>
+    <string name="motor_type">Motorcycle Type</string>
+    <string name="vehicle_license_number">Vehicle License Number</string>
+    <string name="done_request_failed">Request done failed</string>
+    <string name="done_success">Your trip has been done!</string>
 </resources>
