driver online/offline

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="undang">Undang teman</string>
     <string name="bantuan">Pusat bantuan</string>
     <string name="kebijakan">Kebijakan dan privasi</string>
+    <string name="complete_failed">Complete trip failed</string>
+    <string name="complete_trip">Your trip has been done</string>
 </resources>
